# promptexmachina

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: persona.py
promptexmachina/: __init__.py  evaluator.py  loader.py  metrics.py  optim.py  prompter.py  texter.py  utils.py
promptexmachina/dataset/: __init__.py  mmlu.py  parsers.py  topics.py
