[build-system]
requires = [ 
        "flit_core >=3.2,<4",
        "python_version >= '3.7'",
        ]
build-backend = "flit_core.buildapi"

[project]
name = "promptexmachina"
authors = [{name = "people"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "openai",
    "fastparquet",
]


[project.urls]
Home = ""
